Modificacion de Archivo se edito el footer

--- a/style.css
+++ b/style.css
@@ -28,10 +28,25 @@ header h2 {
 }
 
 footer {
-    margin: 35px;
-    text-align: center;
+    background-color: burlywood;
+    margin: 0 auto;
+    padding: 1.2%;
+    color: azure;
 }
 footer a {
-    color: navy;
+    color: blue;
     font-size: 1.5rem;
+    float: right;
+}
+
+/*footer p {
+    margin: 0 auto;
+    padding: 0 auto;
+    text-align: left;
+}
+*/
+footer section {
+    margin: 0;
+    padding: 0;
+    text-align: center;
 }
